// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`-> OK 1`] = `
Object {
  "account_information": Object {
    "account-information": Object {
      "birthday": "",
      "compose-check": "5b242b8294840b89f25bc05462cc96c7",
      "emails": Object {
        "email": Array [
          Object {
            "domain": "ya.ru",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.by",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.com",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.kz",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.ru",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.ua",
            "login": "testVS1",
          },
        ],
      },
      "locale": "ru",
      "login": "testvs1",
      "reg_country": "ru",
      "suid": "869205961",
      "timezone": "Europe/Moscow",
      "uid": "328665045",
    },
  },
  "get_user_parameters": Object {
    "body": Object {
      "can_read_tabs": "on",
      "mail_b2c_can_use_backup": "on",
      "mail_b2c_can_use_hidden_trash": "on",
      "mail_b2c_can_use_opt_in_subs": "on",
      "mail_b2c_domain_enable": "on",
      "opt_in_subs_enabled": "on",
      "show_folders_tabs": "on",
    },
  },
  "settings_setup": Object {
    "body": Object {
      "color_scheme": "weather",
      "default_email": "testovichok2016@тест.рф",
      "default_mailbox": "yandex.ru",
      "folder_thread_view": "on",
      "from_name": "Тестовичок Тестовый Тестовичус 11111111111111111",
      "is_ad_disabled_via_billing": "on",
      "mobile_sign": "-- 
Sent from Yandex.Mail",
      "promote_mail360": false,
      "quotation_char": ">",
      "reply_to": Object {
        "item": Object {
          "$t": "",
          "checked": "",
        },
      },
      "signature_top": "on",
      "telemost_subscription": false,
    },
  },
  "status": Object {
    "status": 1,
  },
  "yamail_status": Object {
    "yamail_status": Object {
      "database_info": Object {
        "state": "read_write",
      },
    },
  },
}
`;

exports[`reply_to (MMAPI-48) -> OK with emails 1`] = `
Object {
  "item": Array [
    "external@example.com",
    Object {
      "$t": "",
      "checked": "",
    },
  ],
}
`;

exports[`reply_to (MMAPI-48) -> OK without emails 1`] = `
Object {
  "item": Object {
    "$t": "",
    "checked": "",
  },
}
`;

exports[`с походом за подпиской в паспорт пасспорт зафейлился 1`] = `
Object {
  "account_information": Object {
    "account-information": Object {
      "birthday": "",
      "compose-check": "5b242b8294840b89f25bc05462cc96c7",
      "emails": Object {
        "email": Array [
          Object {
            "domain": "ya.ru",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.by",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.com",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.kz",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.ru",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.ua",
            "login": "testVS1",
          },
        ],
      },
      "locale": "ru",
      "login": "testvs1",
      "reg_country": "ru",
      "suid": "869205961",
      "timezone": "Europe/Moscow",
      "uid": "328665045",
    },
  },
  "get_user_parameters": Object {
    "body": Object {
      "can_read_tabs": "on",
      "mail_b2c_can_use_backup": "on",
      "mail_b2c_can_use_hidden_trash": "on",
      "mail_b2c_can_use_opt_in_subs": "on",
      "mail_b2c_domain_enable": "on",
      "opt_in_subs_enabled": "on",
      "show_folders_tabs": "on",
    },
  },
  "settings_setup": Object {
    "body": Object {
      "color_scheme": "weather",
      "default_email": "testovichok2016@тест.рф",
      "default_mailbox": "yandex.ru",
      "folder_thread_view": "on",
      "from_name": "Тестовичок Тестовый Тестовичус 11111111111111111",
      "is_ad_disabled_via_billing": "on",
      "mobile_sign": "-- 
Sent from Yandex.Mail",
      "promote_mail360": false,
      "quotation_char": ">",
      "reply_to": Object {
        "item": Object {
          "$t": "",
          "checked": "",
        },
      },
      "signature_top": "on",
      "telemost_subscription": false,
    },
  },
  "status": Object {
    "status": 1,
  },
  "yamail_status": Object {
    "yamail_status": Object {
      "database_info": Object {
        "state": "read_write",
      },
    },
  },
}
`;

exports[`с походом за подпиской в паспорт пасспорт ответил 1`] = `
Object {
  "account_information": Object {
    "account-information": Object {
      "birthday": "",
      "compose-check": "5b242b8294840b89f25bc05462cc96c7",
      "emails": Object {
        "email": Array [
          Object {
            "domain": "ya.ru",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.by",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.com",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.kz",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.ru",
            "login": "testVS1",
          },
          Object {
            "domain": "yandex.ua",
            "login": "testVS1",
          },
        ],
      },
      "locale": "ru",
      "login": "testvs1",
      "reg_country": "ru",
      "suid": "869205961",
      "timezone": "Europe/Moscow",
      "uid": "328665045",
    },
  },
  "get_user_parameters": Object {
    "body": Object {
      "can_read_tabs": "on",
      "mail_b2c_can_use_backup": "on",
      "mail_b2c_can_use_hidden_trash": "on",
      "mail_b2c_can_use_opt_in_subs": "on",
      "mail_b2c_domain_enable": "on",
      "opt_in_subs_enabled": "on",
      "show_folders_tabs": "on",
    },
  },
  "settings_setup": Object {
    "body": Object {
      "color_scheme": "weather",
      "default_email": "testovichok2016@тест.рф",
      "default_mailbox": "yandex.ru",
      "folder_thread_view": "on",
      "from_name": "Тестовичок Тестовый Тестовичус 11111111111111111",
      "is_ad_disabled_via_billing": "on",
      "mobile_sign": "-- 
Sent from Yandex.Mail",
      "promote_mail360": false,
      "quotation_char": ">",
      "reply_to": Object {
        "item": Object {
          "$t": "",
          "checked": "",
        },
      },
      "signature_top": "on",
      "telemost_subscription": false,
    },
  },
  "status": Object {
    "status": 1,
  },
  "yamail_status": Object {
    "yamail_status": Object {
      "database_info": Object {
        "state": "read_write",
      },
    },
  },
}
`;
